fix: add word-wrap: break-word

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,6 +33,7 @@ a {
 p {
     // margin: 0 0 25pt 0;
     text-align: justify;
+    word-wrap: break-word;
 }
 
 h1, h2 {
